--- a/doc/JavaScript/備忘録/２つの配列を連想配列に変換.md
+++ b/doc/JavaScript/備忘録/２つの配列を連想配列に変換.md
@@ -5,3 +5,6 @@ const giita = array2.reduce((accumulator, currentValue, index) => {
   return accumulator;
 }, {});
 ```
+
+## 参考
+[JavaScriptで２つの配列からそれぞれをキーと値としてオブジェクトを作った話【初心者向け/reduce()入門】](https://qiita.com/shigematsu_k/items/f363842eaf68cccaaac7)
